welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: value update is not a member of Boolean
if(estFaceMur()=true){
   ^